--- a/static/shared/css/success-popup.css
+++ b/static/shared/css/success-popup.css
@@ -49,9 +49,14 @@
    color: rgb(190,189,184);
 }
 
-#success-story form {
+/* #success-story form { */
+.popup > * {
     width: 96%;
     margin: 0 auto;
+}
+.popup > .close-popup {
+    width: auto;
+    margin: 0;
 }
 #success-story form>* {
     width: 46%;
@@ -129,6 +134,9 @@
     border: solid rgb(240,240,240) 2px;
     background-color: white;
     overflow: auto;
+}
+#thank-you-popup #thank-you-heading {
+    padding-top: 1em;
 }
 
 
